Fixing typos surfaced by Copilot

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,3 +1,19 @@
+<!--
+
+Looking for pesky typos to fix, with an assist from GitHub's Copilot tab...
+
+# Prompt
+
+Copilot, could you check the attached newsletter draft for any spelling or grammar errors? Output a bulleted list of any that need to be changed, please.
+
+# Response
+
+- "strucure" should be corrected to "structure".
+- "commited" should be corrected to "committed".
+- "course" in "via GitHub, course" should be corrected to "of course".
+
+-->
+
 # Hed TK
 ## Sub-hed TK
 
@@ -11,13 +27,13 @@
 
 **Two years ago,** I began [my first tentative experiments](https://medium.com/the-modern-scientist/robots-and-humans-a-new-era-in-journalism-b07bd6d33eb5) integrating AI tools into my workflow for this newsletter. Like many folks, I've been fiddling around ever since with different tools, scrambling to keep up with the dizzying pace of product releases, trying to discern which apps and models are best at which tasks, and so on. That process has so far been pretty ad-hoc for me, frankly.
 
-Now I'm adding more strucure, including an open-source component that I want to invite everyone into with this update. Here's how it works:
+Now I'm adding more structure, including an open-source component that I want to invite everyone into with this update. Here's how it works:
 
 - **The general idea** is to provide greater visibility into the editorial process for w3w, especially AI-assisted parts that may be of interest to developers or news organizations trying to innovate for this new era. As a bonus, the changes described below should improve transparency and trust for all readers.
 
 - **If you want to follow along,** or contribute, the place to do that will be the coding site GitHub. I've long maintained a [repository of w3w content](https://github.com/peteramckay/w3wnewsletter) there, for purposes of preserving a full archive of the newsletter away from hosted blogging platforms that can always be shut down if they're no longer profitable for their shareholders, etc. The repo was previously private, visible only to me. But I've now made it public, free to use with appropriate attribution under [Creative Commons 4.0 license](https://creativecommons.org/licenses/by/4.0/).
 
-- **I've previously commited to the repo** about once or twice a week, usually as a final step for archival purposes on Sundays, with a minimal description attached to each commit.
+- **I've previously committed to the repo** about once or twice a week, usually as a final step for archival purposes on Sundays, with a minimal description attached to each commit.
 
 - **Beginning with this edition,** commits will be more frequent, including descriptions that specify changes based on queries to specific AI platforms. You can see the new approach in the [GitHub commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-13-wir.md) for this edition of the newsleter, for example.
 
@@ -25,11 +41,11 @@ Now I'm adding more strucure, including an open-source component that I want to 
 
 - **In the final published version of each week's newsletter,** I'm going to summarize which AI tools I used, to give some transparency to readers who *aren't* on GitHub. Production of this week's edition included help from Copilot, the Brave browser's Leo feature, ChatGPT, and NotebookLM. And the illustration this week is a file image I created with DALL·E back in 2023.
 
-- **I also welcome issue reports,** pull requests, and other contributions via GitHub, course. May as well use the site's full feature set.
+- **I also welcome issue reports,** pull requests, and other contributions via GitHub, of course. May as well use the site's full feature set.
 
-At this point, it strikes me that the sweet spot for a project like w3w is human/AI collaboration. I don't think the tools are at a point where they can straight-up replace me -- a scenario that several friends and readers have asked about.
+**At this point,** it strikes me that the sweet spot for a project like w3w is human/AI collaboration. I don't think the tools are at a point where they can straight-up replace me -- a scenario that several friends and readers have asked about.
 
-Not yet. But I definitely think the tools can make me *better* at writing and editing w3w. I also hope there will be a few lessons along the way that might be useful to other people. 😊
+Not yet. But I definitely think the tools can make me *better* at writing and editing w3w. I'm also glad to share any lessons along the way that might be useful to other people. 😊
 
 ### Five Things: April 6-12, 2025
 
@@ -51,4 +67,4 @@ The week's most important headlines for emerging tech:
 
 - **Yay?** People have begun using ChatGPT to turn their photos [into action figures](https://www.yahoo.com/news/chatgpt-ai-action-figure-trend-what-is-it-and-how-can-i-join-in-200532692.html).
 
-_**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊
+_**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_
