New hed, subhead based in part on prompts to ChatGPT, Leo/Llama 3.1, NotebookLM, and Copilot

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,22 +1,107 @@
 <!--
 
-Looking for pesky typos to fix, with an assist from GitHub's Copilot tab...
+Used a multi-step, AI-assisted process to write this commit's headline and subhead.
 
-# Prompt
+First, I ran this prompt though multiple AI apps...
 
-Copilot, could you check the attached newsletter draft for any spelling or grammar errors? Output a bulleted list of any that need to be changed, please.
+Could you please draft 5 possible headlines and 5 possible sub-headlines for this draft of my newsletter?
 
-# Response
+# Response from Copilot
 
-- "strucure" should be corrected to "structure".
-- "commited" should be corrected to "committed".
-- "course" in "via GitHub, course" should be corrected to "of course".
+### Headlines:
+1. "The Future of Journalism: Human and AI Collaboration in Action"
+2. "Transparency and Tech: How AI Shapes This Week’s W3W"
+3. "AI-Assisted News: Behind the Scenes of W3W’s Evolution"
+4. "From Experiment to Structure: W3W’s Open-Source Journey"
+5. "Empowering Journalism with AI: Lessons from W3W"
+
+### Sub-Headlines:
+1. "Integrating AI tools into the editorial process for better visibility and innovation"
+2. "A new approach to commits, transparency, and collaboration on GitHub"
+3. "Exploring the sweet spot where human creativity meets AI assistance"
+4. "How AI tools are making journalism faster, smarter, and more open"
+5. "Inviting readers and developers to contribute to the future of W3W"
+
+# Response from Leo/Llama 3.1
+
+Here are five possible headlines and five possible sub-headlines for your newsletter:
+
+**Headlines**
+1. **AI-Assisted Journalism: A New Era for w3w**
+2. **Transparency and Trust: Open-Source Component for w3w**
+3. **Human/AI Collaboration: The Future of Newsletters**
+4. **Five Things: Emerging Tech News for April 6-12, 2025**
+5. **Tariff Reprieve and Crypto Market Shifts: Key Takeaways**
+
+**Sub-headlines**
+1. **w3w Goes Open-Source: A Look at the New GitHub Repository**
+2. **Lessons Learned: How AI Tools Are Improving My Workflow**
+3. **Tariff Exemptions and Market Volatility: A Closer Look**
+4. **Crypto Whales Take Hits: BlackRock and Strategy's Bitcoin Holdings**
+5. **Sargassum to Biofuel: Caribbean Countries Find Creative Solutions**
+
+
+
+
+
+# Response from ChatGPT
+
+📰 Headline Options
+Inside the Machine: How AI Is Changing This Newsletter
+
+From Ad-Hoc to Open Source: w3w’s New Editorial Workflow
+
+What Happens When You Publish with a Robot?
+
+AI in the Newsroom: A Personal Update from w3w
+
+Git Commit, Then Send: An Experiment in Transparent Journalism
+
+✍️ Sub-headline Options
+Two years after dabbling with AI tools, I'm now opening up the process—on GitHub—for all to see.
+
+The w3w newsletter is going open source and AI-assisted—come see how the sausage gets made.
+
+This week marks a shift: structured use of AI, public commits, and editorial transparency.
+
+Plus: Crypto shakeups, tariff turmoil, and the rise of Tether—your weekly emerging tech roundup.
+
+From DALL·E to ChatGPT, here’s a behind-the-scenes look at how the newsletter is built now.
+
+Would you like me to match specific headline + sub-headline pairs based on different themes (e.g. transparency, AI, crypto angle), or do you want a more playful tone for any of them?
+
+
+# Response from NotebookLM
+
+Here are 5 possible headlines and 5 possible sub-headlines for your newsletter draft from April 13, 2025, drawing from the information in the provided source:
+
+**Possible Headlines:**
+
+*   **w3w Goes Open Source:** Inside the AI-Powered Newsletter's New Workflow.
+*   **Tariff Truce (Mostly):** Tech Reacts to Trump's 90-Day Import Pause.
+*   **AI Joins the Newsroom:** w3w Reveals Its Collaborative Approach on GitHub.
+*   **Uncertainty Lingers Despite Tariff Pause:** Experts Warn of Continued Economic Risks.
+*   **From Pixels to Plastic:** ChatGPT Turns Photos into Action Figures.
+
+**Possible Sub-headlines:**
+
+*   Peter McKay details the integration of Copilot, Leo, ChatGPT, and NotebookLM in this week's edition, now with full transparency on GitHub.
+*   The tech sector celebrates exemptions, but the long-term impact of the administration's trade policy remains a concern.
+*   Explore the enhanced visibility into w3w's editorial process, including AI prompts and outputs, now available on an open GitHub repository.
+*   Venture investor Scott Galloway cautions against the unpredictable nature of US tariff policy and its effect on the market.
+*   A lighter look at emerging tech as users find a novel application for OpenAI's popular chatbot.
+
+
+
+
+Based on above responses, I consolidated all the suggested headlines and subheads into one markdown file. Then I used ChatGPT to narrow it down and made final edit myself.
+
+Full ChatGPT dialog is public at https://chatgpt.com/share/67fc19c0-9638-8013-ba30-4e1c6a273961
 
 -->
 
-# Hed TK
-## Sub-hed TK
-
+# Embracing a new AI-assisted workflow
+## I'm adding structure -- and opening up -- the process for producing the w3w newsletter. 
 ![Robot manning a workstation](https://w3w.news/img/illos/robot-journos-2-cropped.jpg)
 
 *"Robot Journos 2." Illustration by Peter A. McKay x DALL·E*
