Fleshing out early draft, including "5 Things" summaries by Leo/Llama 3.1

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,8 +1,22 @@
+<!--
+
+Early news summary items in the "Five Things" section below were drafted entirely by Leo/Llama 3.1 following this prompt:
+
+I'm thinking of using the news article/video in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Leo, could you please summarize the story in 2-3 sentences?
+
+Will run these through NotebookLM for re-write later, then do a final check myself.
+
+-->
+
 # tktk <!-- Main headline -->
-## tktk > <!-- Subhed -->
+## tktk <!-- Subhed -->
 
 ![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1) <!-- Placeholder image for now -->
 *Photo by Rod Long via Unsplash
+
+<hr>
+
+*Leo/Llama 3.1 and NotebookLM were used in the research, drafting, and editing of the newsletter this week. For fuller details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub.* <!-- Add mentions of other AI tools as needed. -->
 
 <hr>
 
@@ -10,15 +24,17 @@
 
 ### Five Things: April 13-19, 2025
 
-- tk
+<!-- Meta item could also be fleshed out for lead item later in the week, if we want. -Peter -->
 
-- tk
+- **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink))
 
-- tk
+- **US Government's Crypto Holdings** The Trump administration is exploring ways to increase the US government's Bitcoin holdings, including using funds from revalued gold certificates and import tariffs. According to Bo Hines, Executive Director of the President's Council of Advisers on Digital Assets, the administration aims to maximize every legal and fiscal lever to expand the country's crypto holdings. This move could be supported by the reintroduced Bitcoin Act of 2025. ([Cryptopolitan](https://www.msn.com/en-us/politics/government/trump-to-use-tariff-revenue-to-buy-more-bitcoin/ar-AA1CWdHZ))
 
-- tk
+- **Trump Family's Crypto Ventures** The Trump family has invested in various crypto projects, including nonfungible tokens, decentralized finance, memecoins, ETFs, stablecoins, and Bitcoin mining. These ventures have generated significant paper gains, approaching $1 billion, despite market fluctuations. The family's involvement in crypto has raised concerns about potential conflicts of interest given the administration's influence over regulations. ([Bloomberg](https://finance.yahoo.com/news/trump-family-going-crypto-projects-140000972.html))
 
-- Bosa video on AI distillation for CNBC. <!-- Link TK -->
+- **Tech Stocks Rebound Amid AI Hype** The tech startup ecosystem is experiencing a surge in valuations, particularly in AI-related companies, with some startups reaching valuations of $10 billion or more despite not having launched a product yet. This trend is driven by massive investments from venture capital firms and partnerships with major tech companies like Google, Microsoft, and Nvidia. The AI sector is seen as a "bright spot" amid pressure on mega-caps and volatility in the market. ([CNBC](https://www.youtube.com/watch?v=b8RFUvr_tks))
+
+- **Stablecoin Market Growth Predicted** A research report by Standard Chartered predicts that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. This legislation would further legitimize the stablecoin industry, potentially leading to a 10-fold increase in stablecoin supply. The increased demand for dollar-denominated stablecoin reserves could support U.S. dollar hegemony. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
 
 ### Community
 
@@ -28,8 +44,8 @@
 
 ### Odds & Ends
 
-- TK ([](https://www.washingtonpost.com/technology/2025/04/09/ai-em-dash-writing-punctuation-chatgpt/))
+- **Em Dash Debate:** A recent article discusses how the em dash has become a polarizing punctuation mark, with some people believing it's a "tell" for AI-generated writing. However, writers and experts argue that the em dash is a powerful writing tool that's been misused by AI, and its overuse is not a reliable indicator of AI writing. The debate surrounding the em dash has sparked a discussion about the limitations of identifying AI-generated writing. ([Washington Post](https://news.google.com/read/CBMirgFBVV95cUxNRDZUcnE1TjVSUFhuZ0FBMnRfbWM3WUg2RFJOb0xWVHBPaXF3ZU54ZV9pNGloaUk3RGE4a2hpRWdRbDVpUERrbUhpNWI2eWZFbkFWWXZtM2tJbTlNRFFIZkh0Y29tYW1ZSnZJWVBJb0J0TFMtSUpoXzRablplSE1QSU9aekRxWEtyTVduRGVpTDRVcFNFNmZodTNBUnZtMVBVNk5pRWV0NzdLbEhUREE?hl=en-US&gl=US&ceid=US%3Aen))
 
-- TK
+- **Two holidays for the price of one?** Easter and 4/20, cannabis smokers' very unofficial holiday, fell on the same day this year for the first time since 2014. ([USA Today](https://www.usatoday.com/story/news/2025/04/03/when-easter-sunday-420-same-day-list-years-dates/82771933007/))
 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_
