Edits by me to photo, hed, links in lead item.

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,18 +1,8 @@
-<!--
+# Yes, this is a market crash. Duh.
+## tktk <!-- Get AI help drafting subhead. -->
 
-Early news summary items in the "Five Things" section below were drafted entirely by Leo/Llama 3.1 following this prompt:
-
-I'm thinking of using the news article/video in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Leo, could you please summarize the story in 2-3 sentences?
-
-Will run these through NotebookLM for re-write later, then do a final check myself.
-
--->
-
-# tktk <!-- Main headline -->
-## tktk <!-- Subhed -->
-
-![Robot manning a workstation](https://images.unsplash.com/photo-1578374173703-71809a1757b1) <!-- Placeholder image for now -->
-*Photo by Rod Long via Unsplash
+![A bear in the woods](https://w3w.news/img/jessica-weiller-bear-1920.jpg)
+*Photo by Jessica Weiller via Unsplash
 
 <hr>
 
@@ -20,11 +10,23 @@ Will run these through NotebookLM for re-write later, then do a final check myse
 
 <hr>
 
-**TKTK.** tktktk. <!-- Lead item -->
+**TKTK.** tktktk.
+
+<!-- Lead item. Riff on Slate article about Wikipedia editors debating whether this month's market turmoil constitutes a crash. Slate link and other relevant articles below... -->
+
+- https://slate.com/technology/2025/04/trump-news-2025-stock-market-crash-wikipedia-controversy.html
+
+- https://arstechnica.com/tech-policy/2025/04/trumps-tariffs-could-cost-semiconductor-industry-1-billion-industry-fears/
+
+- https://apnews.com/article/tariffs-trump-pharmaceutical-semiconductor-chips-65b528a3ae455b197a26f61f847063ef
+
+- https://www.reuters.com/technology/us-tariffs-may-cost-chip-equipment-makers-more-than-1-billion-industry-estimates-2025-04-15/
+
+- https://www.fxstreet.com/news/dow-jones-slides-as-nvidia-amd-tumble-on-chip-tariffs-powell-speech-eyed-202504161707
 
 ### Five Things: April 13-19, 2025
 
-<!-- Meta item could also be fleshed out for lead item later in the week, if we want. -Peter -->
+<!-- All drafts by Leo/Llama 3.1 for now. Will get NotebookLM to do an edit, then a final one of my own. -->
 
 - **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink))
 
@@ -39,8 +41,6 @@ Will run these through NotebookLM for re-write later, then do a final check myse
 ### Community
 
 - **A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe). 😊
-
-- TK <!-- GitHub link tk -->
 
 ### Odds & Ends
 
