Adding some draft items to "Five Things" section, all drafted by Leo/Llama 3.1

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,12 +1,22 @@
+<!--
+
+Adding some draft items for the "Five Things" section below. All drafted entirely by Leo/Llama 3.1 following this prompt:
+
+I'm thinking of using the news article in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize the story in 2-3 sentences, Leo?
+
+Will run draft items through NotebookLM for re-write later, then do a final check myself.
+
+-->
+
 # Yes, this is a market crash. Duh.
 ## tktk <!-- Get AI help drafting subhead. -->
 
 ![A bear in the woods](https://w3w.news/img/jessica-weiller-bear-1920.jpg)
-*Photo by Jessica Weiller via Unsplash
+*Photo by Jessica Weiller via Unsplash*
 
 <hr>
 
-*Leo/Llama 3.1 and NotebookLM were used in the research, drafting, and editing of the newsletter this week. For fuller details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub.* <!-- Add mentions of other AI tools as needed. -->
+*Leo/Llama 3.1, Copilot, ChatGPT, and NotebookLM were used for research, drafting, and editing of the newsletter this week. Final edit was all me. For fuller details, see this edition's [commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-20-wir.md) on GitHub.* <!-- Check credits again before final publication. -->
 
 <hr>
 
@@ -20,13 +30,38 @@
 
 - https://apnews.com/article/tariffs-trump-pharmaceutical-semiconductor-chips-65b528a3ae455b197a26f61f847063ef
 
+- CoinDesk says the top 50 crypto tokens are clearly signaling a bear as well: https://www.coindesk.com/markets/2025/04/16/crypto-winter-appears-to-have-arrived-with-bitcoin-top-50-tokens-falling-into-bear-market-territory-coinbase-institutional
+
 - https://www.reuters.com/technology/us-tariffs-may-cost-chip-equipment-makers-more-than-1-billion-industry-estimates-2025-04-15/
 
 - https://www.fxstreet.com/news/dow-jones-slides-as-nvidia-amd-tumble-on-chip-tariffs-powell-speech-eyed-202504161707
 
+- https://www.theblock.co/post/350973/crypto-markets-nvidia-trump-china-tariffs
+
 ### Five Things: April 13-19, 2025
 
-<!-- All drafts by Leo/Llama 3.1 for now. Will get NotebookLM to do an edit, then a final one of my own. -->
+The week's most important headlines for emerging tech:
+
+<!-- All drafts by Leo/Llama 3.1 for now. Will get NotebookLM to do an edit, then a final one of my own. NOTE: Drafts so far need A LOT of checking for accuracy, flow, etc. -->
+
+- The Q1 2025 crypto market analysis by CoinDesk Indices reveals a significant shift towards institutional-driven capital flows, with institutions favoring liquid and regulated large-cap assets. This shift has led to a widening gap between Bitcoin and the rest of the market, with Bitcoin's dominance reaching 62.2% in Q1. Altcoins, on the other hand, have underperformed, with some experiencing significant declines. ([CoinDesk](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market))
+
+- **US Secret Service Combats $4.3 Million Ethereum Scam** The US Secret Service, in collaboration with Canadian authorities, has identified and warned victims of a $4.3 million Ethereum "approval phishing" scam as part of "Operation Avalanche." The operation brought together regulators, law enforcement agencies, and crypto trading platforms to find compromised wallets on the Ethereum blockchain. This is the latest effort by the Secret Service to combat illicit activity in the crypto space.([The Block](https://www.theblock.co/post/351030/us-secret-service-combats-ethereum-scam-canadian-officials))
+
+- Auradine, a bitcoin miner manufacturer, has raised $153 million in a Series C funding round, led by StepStone Group, to expand its business into AI infrastructure. The company plans to use the fresh capital to grow its core bitcoin miner manufacturing business and its newly launched AI division, AuraLinks AI, which aims to develop breakthrough open data center networking solutions for the AI era. Auradine's total funding now exceeds $300 million. ([The Block](https://www.theblock.co/post/351003/bitcoin-miner-manufacturer-auradine-series-c-funding-ai-expansion))
+
+- **China's Local Governments Sell Seized Crypto Amid Trading Ban**
+Despite a ban on cryptocurrency trading in mainland China, local governments have been selling confiscated crypto assets to replenish public coffers. This practice, which involves private companies helping to dispose of seized assets, has raised concerns about opaque processes and potential corruption. According to Reuters, one company has facilitated the sale of over 3 billion yuan worth of cryptocurrencies in offshore markets since 2018. ([The Block](https://www.theblock.co/post/350955/china-government-selling-seized-crypto))
+
+- **Oklahoma's bid to establish a state Bitcoin** reserve has fallen short, but the effort has reignited interest in other states, with New Hampshire, Texas, and Arizona now at the forefront of the push for state-level BTC reserves. New Hampshire's House has already passed a bill to invest in Bitcoin and precious metals, while Florida's House Insurance and Banking Committee has unanimously approved a similar measure. The momentum continues to build as more states consider joining the effort. ([Decrypt](https://decrypt.co/315026/oklahoma-kills-bitcoin-reserve-proposal-in-senate-committee-vote))
+
+- **Bitcoin Price Stabilizes Amid Trade War Concerns**
+The price of Bitcoin initially dropped after the White House announced increased tariffs on Chinese goods, but later recovered to trade flat. Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war and decreased investor confidence. Bitcoin's price is currently above its 200-day moving average, but has shown volatility in recent weeks. ([Decrypt](https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs))
+
+- **Coinbase Urges Australia to Support Crypto Reform**
+Coinbase is calling on Australian voters to support crypto reform in the upcoming May 3 federal election, warning that the lack of regulation is driving talent and capital offshore. The company has outlined five urgent steps for the next government to take, including launching a crypto taskforce and enabling stablecoin use. If implemented, this could help Australia regain its edge in Web3 innovation and support the growth of the crypto industry. ([Decrypt](https://decrypt.co/315022/coinbase-urges-australia-vote-crypto-progress-may))
+
+- **OpenAI to Develop Social Media Platform**: OpenAI is reportedly working on a social media platform that could rival Elon Musk's X, integrating a social feed with ChatGPT's image generation capabilities. This move comes amid an escalating legal and public relations war between OpenAI and Musk, who has accused OpenAI of abandoning its nonprofit roots. The project remains in early development, with OpenAI CEO Sam Altman soliciting feedback on the concept. ([Decrypt](https://decrypt.co/315020/openai-plans-x-like-social-platform-amid-ongoing-rift-musk))
 
 - **Meta Platforms**, the owner of Facebook, Instagram, and WhatsApp, is facing an antitrust trial with the Federal Trade Commission (FTC). The FTC alleges that Meta has monopolized the social media market and should be broken up, with the company's acquisition of Instagram and WhatsApp being a key point of contention. The trial, which is expected to last eight weeks, could shape the future of antitrust enforcement and have significant implications for the tech industry. ([Wall Street Journal](https://www.wsj.com/tech/meta-fights-to-keep-instagram-and-whatsapp-as-antitrust-trial-begins-8c6911d9?st=CzM5F5&reflink=desktopwebshare_permalink))
 
