Some copyedits + writethrough by me

--- a/2025/2025-04-20-wir.md
+++ b/2025/2025-04-20-wir.md
@@ -1,13 +1,3 @@
-<!--
-
-Adding some draft items for the "Five Things" section below. All drafted entirely by Leo/Llama 3.1 following this prompt:
-
-I'm thinking of using the news article in this tab in my upcoming newsletter, which contains a bulleted list summarizing important tech news each week. Could you please summarize the story in 2-3 sentences, Leo?
-
-Will run draft items through NotebookLM for re-write later, then do a final check myself.
-
--->
-
 # Yes, this is a market crash. Duh.
 ## tktk <!-- Get AI help drafting subhead. -->
 
@@ -24,6 +14,8 @@ Will run draft items through NotebookLM for re-write later, then do a final chec
 
 <!-- Lead item. Riff on Slate article about Wikipedia editors debating whether this month's market turmoil constitutes a crash. Slate link and other relevant articles below... -->
 
+- Matt Phillips for Sherwood: https://sherwood.news/markets/wall-street-is-starting-to-cut-earnings-forecasts-for-the-mag-7/
+
 - https://slate.com/technology/2025/04/trump-news-2025-stock-market-crash-wikipedia-controversy.html
 
 - https://arstechnica.com/tech-policy/2025/04/trumps-tariffs-could-cost-semiconductor-industry-1-billion-industry-fears/
@@ -38,11 +30,25 @@ Will run draft items through NotebookLM for re-write later, then do a final chec
 
 - https://www.theblock.co/post/350973/crypto-markets-nvidia-trump-china-tariffs
 
+<!-- Insert affiliate blurb -->
+
 ### Five Things: April 13-19, 2025
 
-The week's most important headlines for emerging tech:
+The week's most important headlines in emerging tech:
 
 <!-- All drafts by Leo/Llama 3.1 for now. Will get NotebookLM to do an edit, then a final one of my own. NOTE: Drafts so far need A LOT of checking for accuracy, flow, etc. -->
+
+- WSJ musk story <!-- Link TK -->
+
+- https://www.washingtonpost.com/technology/2025/04/17/llm-poisoning-grooming-chatbots-russia/
+
+- OpenAI changing safety policy again, doesn't seem to care about disinfo. https://fortune.com/2025/04/16/openai-safety-framework-manipulation-deception-critical-risk/
+
+
+
+
+
+
 
 - The Q1 2025 crypto market analysis by CoinDesk Indices reveals a significant shift towards institutional-driven capital flows, with institutions favoring liquid and regulated large-cap assets. This shift has led to a widening gap between Bitcoin and the rest of the market, with Bitcoin's dominance reaching 62.2% in Q1. Altcoins, on the other hand, have underperformed, with some experiencing significant declines. ([CoinDesk](https://www.coindesk.com/coindesk-indices/2025/04/16/bitcoin-leads-a-fundamental-shift-in-the-crypto-market))
 
@@ -73,14 +79,20 @@ Coinbase is calling on Australian voters to support crypto reform in the upcomin
 
 - **Stablecoin Market Growth Predicted** A research report by Standard Chartered predicts that the stablecoin market could grow to $2 trillion by the end of 2028, driven by the expected passage of the Genius Act in the U.S. This legislation would further legitimize the stablecoin industry, potentially leading to a 10-fold increase in stablecoin supply. The increased demand for dollar-denominated stablecoin reserves could support U.S. dollar hegemony. ([CoinDesk](https://www.coindesk.com/markets/2025/04/15/stablecoin-market-could-grow-to-usd2t-by-end-2028-standard-chartered))
 
+### The Week Ahead
+
+Some upcoming stories worth watching:
+
+<!-- Links tk -->
+
 ### Community
 
 - **A big thank-you to the paid subscribers** who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe). 😊
 
 ### Odds & Ends
 
-- **Em Dash Debate:** A recent article discusses how the em dash has become a polarizing punctuation mark, with some people believing it's a "tell" for AI-generated writing. However, writers and experts argue that the em dash is a powerful writing tool that's been misused by AI, and its overuse is not a reliable indicator of AI writing. The debate surrounding the em dash has sparked a discussion about the limitations of identifying AI-generated writing. ([Washington Post](https://news.google.com/read/CBMirgFBVV95cUxNRDZUcnE1TjVSUFhuZ0FBMnRfbWM3WUg2RFJOb0xWVHBPaXF3ZU54ZV9pNGloaUk3RGE4a2hpRWdRbDVpUERrbUhpNWI2eWZFbkFWWXZtM2tJbTlNRFFIZkh0Y29tYW1ZSnZJWVBJb0J0TFMtSUpoXzRablplSE1QSU9aekRxWEtyTVduRGVpTDRVcFNFNmZodTNBUnZtMVBVNk5pRWV0NzdLbEhUREE?hl=en-US&gl=US&ceid=US%3Aen))
+- **Scientists have captured the first confirmed images** of an elusive species of deep-sea squid in its natural habitat. They used a remote vehicle to photograph the animal swimming 600 meters deep (1,968 feet) in the South Atlantic. ([CNN](https://www.cnn.com/2025/04/16/science/colossal-squid-footage/index.html))
 
-- **Two holidays for the price of one?** Easter and 4/20, cannabis smokers' very unofficial holiday, fell on the same day this year for the first time since 2014. ([USA Today](https://www.usatoday.com/story/news/2025/04/03/when-easter-sunday-420-same-day-list-years-dates/82771933007/))
+- **Today's two-holiday special:** Easter this year fell on 4/20, cannabis smokers' very unofficial holiday, for the first time since 2014. But it won't happen again until 2087. ([USA Today](https://www.usatoday.com/story/news/2025/04/03/when-easter-sunday-420-same-day-list-years-dates/82771933007/))
 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_
